<resources>
    <string name="app_name">NoteIce</string>

    <string name="could_not_fetch_notes">Could not fetch notes</string>
    <string name="retry">Retry</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="go_to_signup">Go to Sign Up</string>
    <string name="email_confirmation">Verification email sent. Check your inbox</string>
    <string name="could_not_sign_up">Could not sign up</string>
    <string name="user_already_exists">Invalid login or password</string>

    <string name="could_not_sign_in_check_credentials">Could not sign in. Check your credentials and try again</string>
    <string name="could_not_sign_in">Could not sign in</string>

    <string name="note_title_placeholder">Title</string>
    <string name="note_content_placeholder">Content</string>
    <string name="last_time_modified">Last time modified:</string>
    <string name="today">Today</string>
    <string name="save_note">Save</string>
    <string name="could_not_save_note">Could not save note</string>
    <string name="could_not_delete_notes">Could not delete notes</string>
    <string name="no_notes">Click on + to create a note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>